create lesson special numbers and strings

--- a/3_special_numbers/index.html
+++ b/3_special_numbers/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>2 - Operação aritmética</title>
+    <title>3 - Special Numbers</title>
     <script src="scripts.js"></script>
   </head>
   <body></body>
