--- a/4_string/index.html
+++ b/4_string/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>2 - Operação aritmética</title>
+    <title>4 - String</title>
     <script src="scripts.js"></script>
   </head>
   <body></body>
